Further fix for issue #165. Since overflow prevention seems to be broken, adds proper wrapping for lines overflowing block region width.

--- a/custom.css
+++ b/custom.css
@@ -37,8 +37,10 @@
 .block_sharing_cart ul.tree li > div .instancename,
 .block_sharing_cart ul.tree li > div .instancename .no-overflow p {
     text-overflow: ellipsis;
-    white-space: nowrap;
+    text-align: start;
+    white-space: wrap;
     overflow: hidden;
+    overflow-wrap: anywhere;
     display: inline-block;
     margin: 2px 0 auto 0;
     width: 100%;
